Grace/tests/gibbs/errors/t115.grace
// ERROR = P1004
var x := 42
print x
